-------------------------------------------------------------------------------
Changes in version 1.105

- Fixed envstr_unset to remove all instances of the given name.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.104

- Fixed several typos in the installation files.

- Renamed some files that differed only in upper/lower case.  This
  should fix building on OSX.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.103

- Added two missing header files: fmt/misc.h and fmt/multi.h

- Added a ghash_set function (like ghash_add, but overwrites).

- Added a set of "signalfd" functions as a generic self-pipe setup.

- Added a random number generator based on SURF.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.102

- Fixed a bug in resolve_ipv4name_n: when handling multiple IPs, it
  would always copy the first one multiple times.

- Added more conversions to fmt_multi:
  S - formats a str
  m - formats the result of strerror(errno)

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.101

- Fixed include compatibility problem in sys/tryclockgettime.c.
  Thanks Amitai Schlair

- Added sysdep for __attribute__.

- Marked some symbols as "weak" to prevent link errors if they aren't
  defined by programs using -lbg.

Development of this version has been sponsored by FutureQuest, Inc.